# pymdp

./: Makefile  pyproject.toml
perf_fixtures/: agent_infer_policies_inductive.py  agent_infer_policies_param_info_gain.py  agent_step.py  fpi_high_rank.py  fpi_inference.py  fpi_large.py  mmp_many_modalities_highdim.py  policy_inference_deep_inductive.py  rollout_inductive_batched.py  rollout_learning.py  rollout_learning_param_info_gain.py  rollout_loop.py
pymdp/: agent.py  algos.py  control.py  maths.py
pymdp/envs/: tmaze.py
pymdp/ffi/: CMakeLists.txt  __init__.py  _core.py  _efe.py  _fpi.py
pymdp/ffi/common/: cache_lru.h  content_tag_index.h  convergence_helpers.h  cuda_host_alias.h  cuda_memory.h  cuda_warp_reduce.h  error_helpers.h  fnv1a.h  fpi_convergence_tol.h  kernel_primitives.h  logexp_f32.h  modality_dispatch.h  omp_helpers.h  scratch_arena.h
pymdp/ffi/fpi/: fpi.h  fpi_cpu_core.h  fpi_cpu_runner.cc  fpi_cpu_runner.h  fpi_cuda_cache.cc  fpi_cuda_cache.h  fpi_cuda_context.h  fpi_cuda_host_shim.cc  fpi_cuda_kernels.cu  fpi_cuda_kernels.h  fpi_cuda_runtime.cc  fpi_entry.h  fpi_layout.h  fpi_precompute.h
pymdp/ffi/neg_efe/: factor_history_tables.h  factor_history_tree.h  neg_efe.h  neg_efe_cpu_core.h  neg_efe_cpu_entry.cc  neg_efe_cpu_pipeline.cc  neg_efe_cpu_pipeline.h  neg_efe_cuda_cache.cc  neg_efe_cuda_context.h  neg_efe_cuda_entry.cc  neg_efe_cuda_internal.h  neg_efe_cuda_kernels.cu  neg_efe_cuda_kernels.h  neg_efe_cuda_launch.cc  neg_efe_cuda_runtime.cc  neg_efe_entry.h  neg_efe_layout.h  neg_efe_precompute.h
pymdp/ffi/registration/: xla_register.cc
pymdp/ffi/src/: cpu_capabilities.h  cuda_host_alias.h  error_helpers.h  factor_history_tables.h  factor_history_tree.h  fpi.cc  fpi.h  fpi_cuda_kernels.cu  fpi_cuda_kernels.h  kernel_primitives.h  logexp_f32.h  neg_efe.h  neg_efe_cpu.cc  neg_efe_cuda.cc  neg_efe_cuda_context.h  neg_efe_cuda_kernels.cu  neg_efe_cuda_kernels.h  neg_efe_cuda_memory.h  neg_efe_entry.h  neg_efe_layout.h  neg_efe_precompute.h  omp_helpers.h  xla_register.cc
scripts/: ffi_build.py
